<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <EditText
        android:id="@+id/editLat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_lat"
        android:inputType="numberDecimal" />

    <EditText
        android:id="@+id/editLong"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_long"
        android:inputType="numberDecimal" />

    <Button
        android:id="@+id/buttonSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/save_button_text" />

</LinearLayout>
